# finance-report-assistant

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: settings.toml
docs/: architecture.md  data_schema.md  embedding_retrieval_playground.md  embedding_score_explainer.md  evaluation.md  progress.md  retrieval_error_analysis.md  streamlit_hf.md  tokenization_playground.md  tokenizer_matrix.md
playground/embedding_retrieval/: README.md  common.py  compare_embeddings.py  compare_retrievers.py
playground/tokenization/: README.md  chunk_length_impact.py  common.py  compare_tokenizers.py  oov_analysis.py
scripts/: evaluate_tokenizer.py  ingest_10k.py
src/finance_report_assistant/: cli.py
src/finance_report_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/finance_report_assistant/classification/: themes.py
src/finance_report_assistant/core/: config.py  models.py
src/finance_report_assistant/evaluation/: retrieval_eval.py
src/finance_report_assistant/ingestion/: edgar_ingest.py  sec_client.py
src/finance_report_assistant/processing/: chunker.py  html_cleaner.py  pipeline.py  sentences.py  tokenizer_eval.py
src/finance_report_assistant/qa/: grounded_qa.py
src/finance_report_assistant/retrieval/: __init__.py  bm25.py  (+4 more)
tests/: test_classification_and_summary.py  test_cli.py  test_cli_ask.py  test_cli_eval_retrieval.py  test_edgar_ingest.py  test_pipeline.py  test_processing.py  test_qa.py  test_retrieval.py  test_retrieval_eval.py  test_sentences.py  test_tokenizer_eval.py
(+6 files in other folders)
